tests for fixen in DetailedSources